src/OpenCvSharp.Native/include/open_cv_sharp/features2d/features2d.h

typedef struct jyppx_ocv_features2d_brisk jyppx_ocv_features2d_brisk;
typedef struct jyppx_ocv_features2d_kaze jyppx_ocv_features2d_kaze;
typedef struct jyppx_ocv_features2d_akaze jyppx_ocv_features2d_akaze;
typedef struct jyppx_ocv_features2d_affine jyppx_ocv_features2d_affine;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_create(
    int descriptor_type,
    int descriptor_size,
    int descriptor_channels,
    float threshold,
    int n_octaves,
    int n_octave_layers,
    int diffusivity,
    int max_points,
    jyppx_ocv_features2d_akaze** akaze);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_akaze_release(jyppx_ocv_features2d_akaze* akaze);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_clear(jyppx_ocv_features2d_akaze* akaze);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_empty(const jyppx_ocv_features2d_akaze* akaze, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_descriptor_size(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_descriptor_type(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_default_norm(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_default_name_length(const jyppx_ocv_features2d_akaze* akaze, int* length);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_default_name_fill(const jyppx_ocv_features2d_akaze* akaze, char* buffer, int buffer_capacity, int* written);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_detect_count(const jyppx_ocv_features2d_akaze* akaze, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_detect_fill(const jyppx_ocv_features2d_akaze* akaze, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_compute(const jyppx_ocv_features2d_akaze* akaze, const jyppx_ocv_mat* image, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, jyppx_ocv_key_point* keypoints_out, int keypoint_capacity, int* written_keypoint_count, jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_detect_and_compute_count(const jyppx_ocv_features2d_akaze* akaze, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, int use_provided_keypoints, int* output_keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_detect_and_compute_fill(const jyppx_ocv_features2d_akaze* akaze, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, int use_provided_keypoints, jyppx_ocv_key_point* keypoints_out, int keypoint_capacity, int* output_keypoint_count, jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_get_descriptor_type(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_set_descriptor_type(jyppx_ocv_features2d_akaze* akaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_get_descriptor_size(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_set_descriptor_size(jyppx_ocv_features2d_akaze* akaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_get_descriptor_channels(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_set_descriptor_channels(jyppx_ocv_features2d_akaze* akaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_get_threshold(const jyppx_ocv_features2d_akaze* akaze, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_set_threshold(jyppx_ocv_features2d_akaze* akaze, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_get_n_octaves(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_set_n_octaves(jyppx_ocv_features2d_akaze* akaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_get_n_octave_layers(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_set_n_octave_layers(jyppx_ocv_features2d_akaze* akaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_get_diffusivity(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_set_diffusivity(jyppx_ocv_features2d_akaze* akaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_get_max_points(const jyppx_ocv_features2d_akaze* akaze, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_akaze_set_max_points(jyppx_ocv_features2d_akaze* akaze, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_brisk(
    const jyppx_ocv_features2d_brisk* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_kaze(
    const jyppx_ocv_features2d_kaze* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_affine_create_from_akaze(
    const jyppx_ocv_features2d_akaze* backend,
    int max_tilt,
    int min_tilt,
    float tilt_step,
    float rotate_step_base,
    jyppx_ocv_features2d_affine** affine);