src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.XFeatures2D.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_create")]
        internal static extern int Features2DAkazeCreate(int descriptorType, int descriptorSize, int descriptorChannels, float threshold, int nOctaves, int nOctaveLayers, int diffusivity, int maxPoints, out IntPtr akaze);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_release")]
        internal static extern void Features2DAkazeRelease(IntPtr akaze);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_clear")]
        internal static extern int Features2DAkazeClear(IntPtr akaze);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_empty")]
        internal static extern int Features2DAkazeEmpty(IntPtr akaze, out int empty);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_descriptor_size")]
        internal static extern int Features2DAkazeDescriptorSize(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_descriptor_type")]
        internal static extern int Features2DAkazeDescriptorType(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_default_norm")]
        internal static extern int Features2DAkazeDefaultNorm(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_detect_count")]
        internal static extern int Features2DAkazeDetectCount(IntPtr akaze, IntPtr image, IntPtr mask, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_detect_fill")]
        internal static extern int Features2DAkazeDetectFill(IntPtr akaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_compute")]
        internal static extern int Features2DAkazeCompute(IntPtr akaze, IntPtr image, NativeKeyPoint* keypointsIn, int keypointCount, NativeKeyPoint* keypointsOut, int keypointCapacity, out int writtenKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_detect_and_compute_count")]
        internal static extern int Features2DAkazeDetectAndComputeCount(IntPtr akaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, out int outputKeypointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_detect_and_compute_fill")]
        internal static extern int Features2DAkazeDetectAndComputeFill(IntPtr akaze, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, NativeKeyPoint* keypointsOut, int keypointCapacity, out int outputKeypointCount, IntPtr descriptors);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_default_name_length")]
        internal static extern int Features2DAkazeDefaultNameLength(IntPtr akaze, out int length);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_default_name_fill")]
        internal static extern int Features2DAkazeDefaultNameFill(IntPtr akaze, byte* buffer, int bufferCapacity, out int written);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_descriptor_type")]
        internal static extern int Features2DAkazeGetDescriptorType(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_descriptor_type")]
        internal static extern int Features2DAkazeSetDescriptorType(IntPtr akaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_descriptor_size")]
        internal static extern int Features2DAkazeGetDescriptorSize(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_descriptor_size")]
        internal static extern int Features2DAkazeSetDescriptorSize(IntPtr akaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_descriptor_channels")]
        internal static extern int Features2DAkazeGetDescriptorChannels(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_descriptor_channels")]
        internal static extern int Features2DAkazeSetDescriptorChannels(IntPtr akaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_threshold")]
        internal static extern int Features2DAkazeGetThreshold(IntPtr akaze, out double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_threshold")]
        internal static extern int Features2DAkazeSetThreshold(IntPtr akaze, double value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_n_octaves")]
        internal static extern int Features2DAkazeGetNOctaves(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_n_octaves")]
        internal static extern int Features2DAkazeSetNOctaves(IntPtr akaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_n_octave_layers")]
        internal static extern int Features2DAkazeGetNOctaveLayers(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_n_octave_layers")]
        internal static extern int Features2DAkazeSetNOctaveLayers(IntPtr akaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_diffusivity")]
        internal static extern int Features2DAkazeGetDiffusivity(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_diffusivity")]
        internal static extern int Features2DAkazeSetDiffusivity(IntPtr akaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_get_max_points")]
        internal static extern int Features2DAkazeGetMaxPoints(IntPtr akaze, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_akaze_set_max_points")]
        internal static extern int Features2DAkazeSetMaxPoints(IntPtr akaze, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_brisk")]
        internal static extern int Features2DAffineCreateFromBrisk(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_kaze")]
        internal static extern int Features2DAffineCreateFromKaze(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_affine_create_from_akaze")]
        internal static extern int Features2DAffineCreateFromAkaze(IntPtr backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase, out IntPtr affine);
    }
}
#endif
